Prevent safari wrap

--- a/src-ui/src/app/components/app-frame/app-frame.component.scss
+++ b/src-ui/src/app/components/app-frame/app-frame.component.scss
@@ -57,6 +57,10 @@
   text-transform: uppercase;
 }
 
+.nav {
+  flex-wrap: nowrap;
+}
+
 /*
  * Navbar
  */
